package Tarea_S8.Ejercicio1;

public class JuegoDatoInvalidoException extends Exception {
    public JuegoDatoInvalidoException(String mensaje) {
        super(mensaje);
    }
}

